# FeatureChaos

./: .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Makefile  README.md  cfg_example.yaml  go.mod  go.sum  openapi.yaml
cmd/app/: main.go
migrations/: 20250201093317_add_services_table.sql  20250201093357_add_features_table.sql  20250201093433_add_activation_keys_table.sql  20250201093502_add_activation_params_table.sql  20250201093533_add_activation_values_table.sql  20250201104654_add_service_access_table.sql  20250811163000_add_partial_indexes_activation_values.sql  20250821120000_add_soft_delete_to_features_keys_params.sql  20250821121000_unique_indexes_keys_params.sql  20250821121500_add_unique_service_access_index.sql  20250821122000_add_unique_activation_values_index.sql  20250821123000_fix_unique_index_activation_values_nulls.sql  20251018153000_add_updated_at_to_activation_values.sql
names/: names.go
proto/: FeatureChaos.proto
scripts/: gen_proto.sh
sdk/fc_sdk_go/: client.go  client_test.go  go.mod  go.sum
sdk/fc_sdk_go/pb/: FeatureChaos.pb.go  FeatureChaos.proto  FeatureChaos_grpc.pb.go
sdk/fc_sdk_java/: README.md  build.gradle  settings.gradle
sdk/fc_sdk_js/: README.md
sdk/fc_sdk_js/js/: client.js
sdk/fc_sdk_js/ts/: client.ts  storage.ts
sdk/fc_sdk_php/: composer.json
sdk/fc_sdk_py/: pyproject.toml
sdk/fc_sdk_py/featurechaos/: __init__.py  client.py
sdk/fc_sdk_py/featurechaos/pb/: FeatureChaos_pb2.py  FeatureChaos_pb2_grpc.py
sdk/featurechaos/: client.go  client_test.go  go.mod  go.sum
sdk/python/: README.md
(+64 files in other folders)
