[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "featurechaos-sdk"
version = "0.1.0"
description = "FeatureChaos Python SDK: subscribe to features, evaluate activation, and send stats"
authors = [{ name = "devpro_studio" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "grpcio>=1.56",
  "protobuf>=4.25",
]

[project.urls]
Homepage = "https://gitlab.com/devpro_studio/FeatureChaos"

[tool.setuptools.packages.find]
where = ["."]
include = ["featurechaos*"]
